--- a/App_Config/Include/zzz/nextjs-app.config
+++ b/App_Config/Include/zzz/nextjs-app.config
@@ -66,7 +66,7 @@
       <site patch:before="site[@name='website']"
             inherits="website"
             name="nextjs-app"
-            hostName="nextjs-app.dev.local"
+            hostName="headlesspoc-cm.sitecoredemo.com/"
             rootPath="/sitecore/content/nextjs-app"
             startItem="/home"
             database="master" />
