removing site configus

--- a/App_Config/Include/zzz/nextjs-app.config
+++ b/App_Config/Include/zzz/nextjs-app.config
@@ -63,13 +63,13 @@
         but disables workflow and publishing. Before going to production, change the `database`
         below to `web` instead of `master`.
       -->
-      <site patch:before="site[@name='website']"
+      <!-- <site patch:before="site[@name='website']"
             inherits="website"
             name="nextjs-app"
             hostName="headlesspoc-cm.sitecoredemo.com/"
             rootPath="/sitecore/content/nextjs-app"
             startItem="/home"
-            database="master" />
+            database="master" /> -->
     </sites>
     <javaScriptServices>
       <apps>
@@ -87,7 +87,7 @@
           since language is required in all Edge queries. "jss" configuration does not do this (which is backwards
           compatible with JSS versions < 18.0.0).
         -->
-        <app name="nextjs-app"
+        <!-- <app name="nextjs-app"
             layoutServiceConfiguration="default"
             sitecorePath="/sitecore/content/nextjs-app"
             useLanguageSpecificLayout="true"
@@ -96,7 +96,7 @@
             serverSideRenderingEngine="http"
             serverSideRenderingEngineEndpointUrl="http://localhost:3000/api/editing/render"
             serverSideRenderingEngineApplicationUrl="http://localhost:3000"
-        />
+        /> -->
       </apps>
       <!--
         IMAGE RESIZING WHITELIST
