--- a/App_Config/Include/zzz/nextjs-styleguide-app.config
+++ b/App_Config/Include/zzz/nextjs-styleguide-app.config
@@ -63,13 +63,13 @@
         but disables workflow and publishing. Before going to production, change the `database`
         below to `web` instead of `master`.
       -->
-      <site patch:before="site[@name='website']"
+      <!-- <site patch:before="site[@name='website']"
             inherits="website"
             name="nextjs-styleguide-app"
             hostName="headlesspoc-cm.sitecoredemo.com/"
             rootPath="/sitecore/content/nextjs-styleguide-app"
             startItem="/home"
-            database="master" />
+            database="master" /> -->
     </sites>
     <javaScriptServices>
       <apps>
