--- a/App_Config/Include/zzz/nextjs-styleguide-app.deploysecret.config
+++ b/App_Config/Include/zzz/nextjs-styleguide-app.deploysecret.config
@@ -2,10 +2,10 @@
   <sitecore>
     <javaScriptServices>
       <apps>
-        <app name="nextjs-styleguide-app"
+        <!-- <app name="nextjs-styleguide-app"
              deploymentSecret="8h7acimqr5qvf9lgqp9xgiidzsbyewtjn2jakwqbstlw"
              debugSecurity="false"
-        />
+        /> -->
       </apps>
     </javaScriptServices>
   </sitecore>
