--- a/App_Config/Include/zzz/nextjs-app.config
+++ b/App_Config/Include/zzz/nextjs-app.config
@@ -87,16 +87,16 @@
           since language is required in all Edge queries. "jss" configuration does not do this (which is backwards
           compatible with JSS versions < 18.0.0).
         -->
-        <!-- <app name="nextjs-app"
+        <app name="nextjs-empty"
             layoutServiceConfiguration="default"
-            sitecorePath="/sitecore/content/nextjs-app"
+            sitecorePath="/sitecore/content/nextjs/nextjs-empty"
             useLanguageSpecificLayout="true"
             graphQLEndpoint="/sitecore/api/graph/edge"
             inherits="defaults"
             serverSideRenderingEngine="http"
             serverSideRenderingEngineEndpointUrl="http://localhost:3000/api/editing/render"
             serverSideRenderingEngineApplicationUrl="http://localhost:3000"
-        /> -->
+        />
       </apps>
       <!--
         IMAGE RESIZING WHITELIST
